[package]
name = "blockchain-with-rocket-and-mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
serde = { version = "1.0", features = ["derive"] }
rocket_contrib = { version = "0.4.10", default-features = false, features = ["json"] }
mongodb = { version = "2.1", default-features = false, features = ["tokio-runtime"] }
tokio = "1"
dotenv = "0.15.0"
sha2 = "0.10.6"
serde_json = "1.0.91"
reqwest = { version = "0.11.13", features = ["json"] }